--- a/TP2/informe/hongkong.tex
+++ b/TP2/informe/hongkong.tex
@@ -1,4 +1,4 @@
-\subsection{The Hong Kong University of Technology and Science - Hong Kong - IP: 193.51.86.16}
+\subsection{Universidad de Hong Kong - China}
 
 Para esta IP monitoriamos el traceroute hasta el número 90. Presentamos en la siguiente tabla los resultados obtenidos.
 
@@ -71,12 +71,12 @@ El test nos dio $Rechadazo$, como era de esperarse, debido a que realizamos una 
 
 Presentamos un mapa que muestra la ubicación geográfica de los saltos\\
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=1\textwidth]{graficos/mapa_HongKong.jpg}
-\caption{Saltos hacia la Universidad de Hong Kong}
-\label{hongkong_rtt}
-\end{figure}
+%\begin{figure}[H]
+%\centering
+%\includegraphics[width=1\textwidth]{graficos/mapa_HongKong.jpg}
+%\caption{Saltos hacia la Universidad de Hong Kong}
+%\label{hongkong_rtt}
+%\end{figure}
 
 
 \begin{figure}[H]
