--- a/TP2/informe/informe.tex
+++ b/TP2/informe/informe.tex
@@ -42,7 +42,7 @@
 \submateria{2do Cuatrimestre de 2015}
 \grupo{Grupo 5}
 
-\integrante{Abásolo, Nicolás}{310/08}{nicolasabasolo@gmail.com}
+\integrante{Abásolo, Nicolás}{310/08}{nabasolo@dc.uba.ar}
 \integrante{Garrone, Javier}{151/10}{javier3653@gmail.com}
 \integrante{Negri, Franco}{693/13}{franconegri2004@hotmail.com}
 \integrante{Santos, Diego}{874/03}{diego.h.santos@gmail.com}
