--- a/TP2/informe/intro.tex
+++ b/TP2/informe/intro.tex
@@ -1,10 +1,10 @@
 \section{Introducción}
 
-En este trabajo práctico hemos realizado nuestra propia implementación de la herramienta $traceroute$.
+En el siguiente trabajo práctico hemos realizado nuestra propia implementación de la herramienta $traceroute$.
 Esta herramienta permite conocer la ruta de los paquetes en una conexión $end$ $to$ $end$. 
 En nuestra implementación enviamos paquetes $ICMP$ e incrementamos gradualmente el valor de $TTL$ empezando con un valor fijo igual a 1 (uno). 
-Utilizamos esta herramienta para realizar distintas experimentaciones, entre ellas conocer las rutas que atraviesan los paquetes hasta 
-llegar a cuatro universidades localizadas en distintos puntos de la Tierra y calcular los $RTTs$ relativos de los distintos hops.
+Utilizamos la herramienta para realizar distintas experimentaciones, entre ellas conocer las rutas que atraviesan los paquetes hasta que 
+llegan a cuatro universidades localizadas en distintos puntos de la Tierra y calcular los $RTTs$ relativos de los distintos hops.
 Una vez obtenida esta información se utilizará para detectar enlaces submarinos entre continentes. Nos hemos basado que ante grandes variaciones
 de $RTT$ podríamos estar en presencia de un enlace submarino.
 
