--- a/TP2/informe/australia.tex
+++ b/TP2/informe/australia.tex
@@ -1,4 +1,5 @@
 \subsection{Universidad de Sydney - Australia}
+Presentamos en la siguiente tabla los resultados obtenidos del último monitoreo.
 
 \bigskip
 
