--- a/TP2/informe/hongkong.tex
+++ b/TP2/informe/hongkong.tex
@@ -1,6 +1,5 @@
 \subsection{Universidad de Hong Kong - China}
-
-Para esta IP monitoriamos el traceroute hasta el número 90. Presentamos en la siguiente tabla los resultados obtenidos.
+Presentamos en la siguiente tabla los resultados obtenidos del último monitoreo.
 
 \bigskip
 
