--- a/TP2/informe/rusia.tex
+++ b/TP2/informe/rusia.tex
@@ -1,6 +1,5 @@
  \subsection{Universidad de Mosku - Rusia}
-
-Como tercer caso de estudio, tomamos el servidor de la universidad de mosku (www.msu.ru). El traceroute obtenido para esta universidad es el siguiente:
+Presentamos en la siguiente tabla los resultados obtenidos del último monitoreo.
 
 \bigskip
 
