--- a/TP2/informe/segundaConsigna.tex
+++ b/TP2/informe/segundaConsigna.tex
@@ -1,4 +1,9 @@
 \section{Análisis de datos}
+Para cada host destino se ha monitoreado la ruta durante un tiempo considerable.
+De esta manera se ha buscado que los datos se estabilicen y sean lo más certero posible.\\
+
+A continuación detallamos la información obtenida en las mediciones.
+
 \input{francia}
 
 \input{rusia}
