--- a/TP2/informe/australia.tex
+++ b/TP2/informe/australia.tex
@@ -74,3 +74,11 @@ Presentamos en la siguiente tabla los resultados obtenidos del último monitoreo
 \caption{RTT promedio por hop - Universidad de Sydney}
 \label{Australia_rtt}
 \end{figure}
+
+A continuación hemos trazado en un mapa la ruta de nuestro host hasta el host destino ubicado en Australia:
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.8\textwidth]{graficos/mapa_australia.jpg}
+\caption{Ruta en Internet - Universidad de Sydney}
+\label{australia_zs}
+\end{figure}
