--- a/TP2/informe/francia.tex
+++ b/TP2/informe/francia.tex
@@ -97,10 +97,10 @@ Para los demás saltos hemos notado que los $\Delta$ $RTT$ son similares y los h
 hemos observado valores atípicos.\\
 
 A continuación hemos trazado en un mapa la ruta de nuestro host hasta el host destino ubicado en Francia:
-%\begin{figure}[H]
-%\centering
-%\includegraphics[width=1\textwidth]{graficos/mapa_Francia.jpg}
-%\caption{Ruta en Internet - Universidad de Francia}
-%\label{francia_zs}
-%\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.8\textwidth]{graficos/mapa_francia.jpg}
+\caption{Ruta en Internet - Universidad de Francia}
+\label{francia_zs}
+\end{figure}
 
