--- a/TP2/informe/rusia.tex
+++ b/TP2/informe/rusia.tex
@@ -93,3 +93,11 @@ hop & IP & Host name\\
 Tomando como hipotesis que los nombres de los hosts se correspondan con su hubicación geografica, entonces nuestros resultados sobre 
 cuales son los saltos submarinos parecerían tener sentido ya que del salto 5 al salto 6 el paquete habría viajado desde argentina hasta miami y 
 del salto 7 al salto 8 el paquete pareceria haber viajado de miami a estocolmo.
+
+A continuación hemos trazado en un mapa la ruta de nuestro host hasta el host destino ubicado en Rusia:
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.8\textwidth]{graficos/mapa_rusia.jpg}
+\caption{Ruta en Internet - Universidad de Mosku}
+\label{rusia_zs}
+\end{figure}
