--- a/TP2/informe/segundaConsigna.tex
+++ b/TP2/informe/segundaConsigna.tex
@@ -2,7 +2,8 @@
 Para cada host destino se ha monitoreado la ruta durante un tiempo considerable.
 De esta manera se ha buscado que los datos se estabilicen y sean lo más certero posible.\\
 
-A continuación detallamos la información obtenida en las mediciones.
+A continuación detallamos la información obtenida en las mediciones. Es importante aclarar que en las tablas de monitoreo la información de Ubicación
+fue obtenida de la herramienta $http://www.plopip.com/$. Cómo hemos hallado inconsistencias, dicha ubicación podría ser modificada en las conclusiones finales.
 
 \input{francia}
 
